--- a/demo/index.html
+++ b/demo/index.html
@@ -12,6 +12,7 @@
     <div id="field">
         <div id="ball"></div>
     </div>
-    <script src="index.js" type="module"></script>
+    <script src="../lib/animation.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
